fix spacing around error messages

--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -31,9 +31,8 @@ form.loading {
   padding: 10px 6px;
   font-size: 16px;
   font-family: "Atkinson Hyperlegible", sans-serif;
-  color: var(--light-black);
+  color: var(--dark-gray);
   transition: background-color 0.6s ease, border-color 0.6s ease;
-  box-sizing: border-box;
 }
 
 .input.darkMode {
@@ -94,4 +93,12 @@ textarea.input {
   display: inline-block;
   position: relative;
   top: 4px;
+}
+
+.hiddenIcon {
+  font-size: 20px;
+  visibility: hidden;
+  position: relative;
+  top: 4px;
+  width: 0px;
 }
